--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ padding-bottom:5px;
   </ul>
   <div class="side-feedback">
     <h3>Give Us Your Feedback</h3>
-    <p> Need any help? Write to us at <a href="mailto:support@redcarpetmatrimony.com">support@redcarpetmatrimony.com</a><br>
+    <p> Need any help? Write to us at <a href="mailto:support@redcarpetmatrimony.com">support@christianmatrimony.com</a><br>
      Call :
 		  <a href="tel:+91-124-265 8600">+91-123-456 7890</a> 
 		       (India)</p>
@@ -937,7 +937,7 @@ padding-bottom:5px;
 
 
 <section class="someone-special">
-    <h1 class="text-center white-text" style="font-size: 36px;">Why RED CARPET?</h1>
+    <h1 class="text-center white-text" style="font-size: 36px;">Why Christian Matrimony ?</h1>
     <div class="row wrapper">
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
         <div class="steps-holder">
@@ -1168,9 +1168,9 @@ padding-bottom:5px;
     </div>
   </section>
  
- <footer class="tiny-footer"><span>Copyrights 2018, redcarpetmatrimony.com. All Rights Reserved.</span>
+ <footer class="tiny-footer"><span>Copyrights 2018, christianmatrimony.com. All Rights Reserved.</span>
  &nbsp;
- <span>Designed by <a href="http://www.jashya.com/" target="_blank">Jashya.com</a></span></footer>
+ </footer>
  <script type="text/javascript" src="assets/js/bootstrap/bootstrap.min.js" ></script> 
  <script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
  <script  type="text/javascript" src="assets/app/HomeApp7893.js"></script>  
